; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_bridge.c_bridge_linkstate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_bridge.c_bridge_linkstate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.bridge_softc* }
%struct.bridge_softc = type { i32 }
%struct.bridge_iflist = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*)* @bridge_linkstate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bridge_linkstate(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.bridge_softc*, align 8
  %4 = alloca %struct.bridge_iflist*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %5 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %6 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %5, i32 0, i32 0
  %7 = load %struct.bridge_softc*, %struct.bridge_softc** %6, align 8
  store %struct.bridge_softc* %7, %struct.bridge_softc** %3, align 8
  %8 = load %struct.bridge_softc*, %struct.bridge_softc** %3, align 8
  %9 = call i32 @BRIDGE_LOCK(%struct.bridge_softc* %8)
  %10 = load %struct.bridge_softc*, %struct.bridge_softc** %3, align 8
  %11 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %12 = call %struct.bridge_iflist* @bridge_lookup_member_if(%struct.bridge_softc* %10, %struct.ifnet* %11)
  store %struct.bridge_iflist* %12, %struct.bridge_iflist** %4, align 8
  %13 = load %struct.bridge_iflist*, %struct.bridge_iflist** %4, align 8
  %14 = icmp eq %struct.bridge_iflist* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %1
  %16 = load %struct.bridge_softc*, %struct.bridge_softc** %3, align 8
  %17 = call i32 @BRIDGE_UNLOCK(%struct.bridge_softc* %16)
  br label %26

18:                                               ; preds = %1
  %19 = load %struct.bridge_softc*, %struct.bridge_softc** %3, align 8
  %20 = call i32 @bridge_linkcheck(%struct.bridge_softc* %19)
  %21 = load %struct.bridge_softc*, %struct.bridge_softc** %3, align 8
  %22 = call i32 @BRIDGE_UNLOCK(%struct.bridge_softc* %21)
  %23 = load %struct.bridge_iflist*, %struct.bridge_iflist** %4, align 8
  %24 = getelementptr inbounds %struct.bridge_iflist, %struct.bridge_iflist* %23, i32 0, i32 0
  %25 = call i32 @bstp_linkstate(i32* %24)
  br label %26

26:                                               ; preds = %18, %15
  ret void
}

declare dso_local i32 @BRIDGE_LOCK(%struct.bridge_softc*) #1

declare dso_local %struct.bridge_iflist* @bridge_lookup_member_if(%struct.bridge_softc*, %struct.ifnet*) #1

declare dso_local i32 @BRIDGE_UNLOCK(%struct.bridge_softc*) #1

declare dso_local i32 @bridge_linkcheck(%struct.bridge_softc*) #1

declare dso_local i32 @bstp_linkstate(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
